Add documention to index.html file. Update width to msform fieldset width. Finish adding JS code.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-  font-family: "Montserrat", Arial, Verdana;
+  font-family: montserrat, arial, verdana;
 }
 
 /* form styles */
@@ -36,7 +36,7 @@ body {
   box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
   padding: 20px 30px;
   box-sizing: border-box;
-  width: 100%;
+  width: 80%;
   margin: 0 10%;
   /* stacking fieldsets above each other */
   position: absolute;
