--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 /*custom font*/
 @import url(http://fonts.googleapis.com/css?family=Montserrat);
 
-/* Basic reset */
+/* basic reset */
 * {
   margin: 0;
   padding: 0;
@@ -9,7 +9,7 @@
 
 html {
   height: 100%;
-  /* Image only BG fallback */
+  /* image only BG fallback */
   background: url('http://thecodeplayer.com/uploads/media/gs.png');
   /* background = gradient + image pattern combo */
   background:
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-  font-family: montserrat, arial, verdana;
+  font-family: monsterrat, arial, verdana;
 }
 
 /* form styles */
@@ -42,7 +42,7 @@ body {
   position: absolute;
 }
 
-/* Hide all except first fieldset */
+/* Hide all except first fieldsets */
 #msform fieldset:not(:first-of-type) {
   display: none;
 }
@@ -71,78 +71,4 @@ body {
   cursor: pointer;
   padding: 10px 5px;
   margin: 10px 5px;
-}
-
-#msform .action-button:hover, #msform .action-button:focus {
-  box-shadow: 0 0 0 2px white, 0 0 0 3px #27AE60;
-}
-
-/* Headings */
-.fs-title {
-  font-size: 15px;
-  text-transform: uppercase;
-  color: #2C3E50;
-  margin-bottom: 10px;
-}
-
-.fs-subtitle {
-  font-weight: normal;
-  font-size: 13px;
-  color: #666;
-  margin-bottom: 20px;
-}
-
-/* progress bar */
-#progressbar {
-  margin-bottom: 30px;
-  overflow: hidden;
-  /* CSS counters to number the steps */
-  counter-reset: step;
-}
-
-#progressbar li {
-  list-style-type: none;
-  color: white;
-  text-transform: uppercase;
-  font-size: 9px;
-  width: 33.33%;
-  float: left;
-  position: relative;
-}
-
-#progressbar li:before {
-  content: counter(step);
-  counter-increment: step;
-  width: 20px;
-  line-height: 20px;
-  display: block;
-  font-size: 10px;
-  color: #333;
-  background: white;
-  border-radius: 3px;
-  margin: 0 auto 5px auto;
-}
-
-/* Progressbar connectors */
-#progressbar li:after {
-  content: '';
-  width: 100%;
-  height: 2px;
-  background: white;
-  position: absolute;
-  left: -50%;
-  top: 9px;
-  z-index: -1; /* put it behind the numbers */
-}
-
-#progressbar li:first-child:after {
-  /* connector not needed before the first step */
-  content: none;
-}
-
-/* marking active/completed steps green */
-/* The number of the step and the connector before it = green */
-#progressbar li:active:before, #progressbar li.active:after {
-  background: #27AE60;
-  color: white;
 }
