--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,3 +72,77 @@ body {
   padding: 10px 5px;
   margin: 10px 5px;
 }
+
+#msform .action-button:hover, #msform .action-button:focus {
+  box-shadow: 0 0 0 2px white, 0 0 0 3px #27AE60;
+}
+
+/* Headings */
+.fs-title {
+  font-size: 15px;
+  text-transform: uppercase;
+  color: #2C3E50;
+  margin-bottom: 10px;
+}
+
+.fs-subtitle {
+  font-weight: normal;
+  font-size: 13px;
+  color: #666;
+  margin-bottom: 20px;
+}
+
+/* progressbar */
+#progressbar {
+  margin-bottom: 30px;
+  overflow: hidden;
+  /* CSS counters to number the steps */
+  counter-reset: step;
+}
+
+#progressbar li {
+  list-style-type: none;
+  color: white;
+  text-transform: uppercase;
+  font-size: 9px;
+  width: 33.33%;
+  float: left;
+  position: relative;
+}
+
+#progressbar li:before {
+  content: counter(step);
+  counter-increment: step;
+  width: 20px;
+  line-height: 20px;
+  display: block;
+  font-size: 10px;
+  color: #333;
+  background: white;
+  border-radius: 3px;
+  margin: 0 auto 5px auto;
+}
+
+/* progressbar connectors */
+#progressbar li:after {
+  content: '';
+  width: 100%;
+  height: 2px;
+  background: white;
+  position: absolute;
+  left: -50%;
+  top: 9px;
+  z-index: -1; /* put it behind the numbers */
+}
+
+#progressbar li:first-child:after {
+  /* connector not needed before the first step */
+  content: none;
+}
+
+/* Marking active/completed steps green */
+/* Number of steps and the connectors before it = green */
+#progressbar li.active:before, #progressbar li.active:after {
+  background: #27AE60;
+  color: white;
+}
